--- a/package.json
+++ b/package.json
@@ -1,5 +1,1 @@
-"name": "@pantheon-systems/gatsby-wordpress-starter",
-        "version": "2.1.0",
-"engines": {
-            "node": ">=1.10.3 <=18"
-}
+"name": "@pantheon-systems/gatsby-wordpress-starter"
